Solved #353 by changing colours to make code more readable

--- a/ui/src/css/highlight.css
+++ b/ui/src/css/highlight.css
@@ -1,14 +1,14 @@
 /*! Adapted from the GitHub style by Vasily Polovnyov <vast@whiteants.net> */
 .hljs-comment,
 .hljs-quote {
-  color: #d14;
+  color: #ff5555;
   font-style: italic;
 }
 
 .hljs-keyword,
 .hljs-selector-tag,
 .hljs-subst {
-  color: #008080;
+  color: #44aaff;
   font-weight: var(--monospace-font-weight-bold);
 }
 
